@@ -7,11 +7,16 @@ import com.kynsof.share.utils.ConsumerUpdate;
 import com.kynsof.share.utils.UpdateIfNotNull;
 import com.kynsoft.finamer.creditcard.domain.dto.ManageTransactionStatusDto;
 import com.kynsoft.finamer.creditcard.domain.dtoEnum.Status;
+import com.kynsoft.finamer.creditcard.domain.rules.manageTransactionStatus.ManageTransactionReceivedStatusMustBeUniqueRule;
+import com.kynsoft.finamer.creditcard.domain.rules.manageTransactionStatus.ManageTransactionRefundStatusMustBeUniqueRule;
+import com.kynsoft.finamer.creditcard.domain.rules.manageTransactionStatus.ManageTransactionSentStatusMustBeUniqueRule;
 import com.kynsoft.finamer.creditcard.domain.services.IManageTransactionStatusService;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.UUID;
 import java.util.function.Consumer;
+import java.util.stream.Collectors;
 
 @Component
 public class UpdateManageTransactionStatusCommandHandler implements ICommandHandler<UpdateManageTransactionStatusCommand> {
@@ -26,7 +31,15 @@ public class UpdateManageTransactionStatusCommandHandler implements ICommandHand
     public void handle(UpdateManageTransactionStatusCommand command) {
 
         RulesChecker.checkRule(new ValidateObjectNotNullRule<>(command.getId(), "id", "Manage Transaction Status ID cannot be null."));
-
+        if (command.isSentStatus()){
+            RulesChecker.checkRule(new ManageTransactionSentStatusMustBeUniqueRule(this.service, command.getId()));
+        }
+        if (command.isRefundStatus()){
+            RulesChecker.checkRule(new ManageTransactionRefundStatusMustBeUniqueRule(this.service, command.getId()));
+        }
+        if (command.isReceivedStatus()){
+            RulesChecker.checkRule(new ManageTransactionReceivedStatusMustBeUniqueRule(this.service, command.getId()));
+        }
         ManageTransactionStatusDto dto = this.service.findById(command.getId());
 
         ConsumerUpdate update = new ConsumerUpdate();
@@ -35,15 +48,28 @@ public class UpdateManageTransactionStatusCommandHandler implements ICommandHand
         UpdateIfNotNull.updateIfStringNotNullNotEmptyAndNotEquals(dto::setName, command.getName(), dto.getName(), update::setUpdate);
         UpdateIfNotNull.updateBoolean(dto::setEnablePayment, command.getEnablePayment(), dto.getEnablePayment(), update::setUpdate);
         UpdateIfNotNull.updateBoolean(dto::setVisible, command.getVisible(), dto.getVisible(), update::setUpdate);
-        this.updateStatus(dto::setStatus, command.getStatus(), dto.getStatus(), update::setUpdate);
-        List<ManageTransactionStatusDto> navigate = this.service.findByIds(command.getNavigate().stream().toList());
-        dto.setNavigate(navigate);
-        this.service.update(dto);
+        UpdateIfNotNull.updateBoolean(dto::setSentStatus, command.isSentStatus(), dto.isSentStatus(), update::setUpdate);
+        UpdateIfNotNull.updateBoolean(dto::setRefundStatus, command.isRefundStatus(), dto.isRefundStatus(), update::setUpdate);
+        UpdateIfNotNull.updateBoolean(dto::setReceivedStatus, command.isReceivedStatus(), dto.isReceivedStatus(), update::setUpdate);
+        updateStatus(dto::setStatus, command.getStatus(), dto.getStatus(), update::setUpdate);
+        updateNavigate(dto::setNavigate, command.getNavigate(), dto.getNavigate().stream().map(ManageTransactionStatusDto::getId).collect(Collectors.toList()), update::setUpdate);
+
+        if(update.getUpdate() > 0){
+            this.service.update(dto);
+        }
     }
 
     private void updateStatus(Consumer<Status> setter, Status newValue, Status oldValue, Consumer<Integer> update) {
         if (newValue != null && !newValue.equals(oldValue)) {
             setter.accept(newValue);
+            update.accept(1);
+        }
+    }
+
+    private void updateNavigate(Consumer<List<ManageTransactionStatusDto>> setter, List<UUID> newValue, List<UUID> oldValue, Consumer<Integer> update) {
+        if (newValue != null && !newValue.equals(oldValue)) {
+            List<ManageTransactionStatusDto> dtoList = this.service.findByIds(newValue);
+            setter.accept(dtoList);
             update.accept(1);
 
         }
